tests/NormalTests/paczka1/fuzzy1/49330872.err
Error in line 10: oRd5BJ S941 306,4
Error in line 3: grrc9Qh4mPx A300 95,8
Error in line 16: grrc9Qh4mPx S163 74,7
Error in line 28: grrc9Qh4mPx S941 15,
Error in line 31: oRd5BJ A560 -6,9
Error in line 12: ALStjgLKRq S941 18,8
